--- a/css/styles.css
+++ b/css/styles.css
@@ -720,6 +720,15 @@ section.map {
       clear: both;
       content: "";
       display: table; }
+    section.map .controls input[type='range'] {
+      width: 100%; }
+    section.map .controls input[type='range']::-webkit-slider-runnable-track:after {
+      position: absolute;
+      float: left;
+      width: 100%;
+      font-size: 9px;
+      white-space: 10px;
+      content: "Vše 1947-1950 1951-1965 1966-1971 1972-1989"; }
   section.map #map-canvas {
     z-index: 0;
     height: 600px; }
