--- a/css/styles.scss
+++ b/css/styles.scss
@@ -43,14 +43,14 @@ section.map {
 		}
 
 		input[type='range']::-webkit-slider-runnable-track {
-			&:after {
-				position: absolute;
-				float: left;
-				width: 100%;
-				font-size: 9px;
-				white-space: 10px;
-				content: "Vše 1947-1950 1951-1965 1966-1971 1972-1989";
-			}
+			// &:after {
+			// 	position: absolute;
+			// 	float: left;
+			// 	width: 100%;
+			// 	font-size: 9px;
+			// 	white-space: 10px;
+			// 	content: "Vše 1947-1950 1951-1965 1966-1971 1972-1989";
+			// }
 		}
 
 
