--- a/css/base/_class-variables.scss
+++ b/css/base/_class-variables.scss
@@ -14,3 +14,23 @@
 .text-center {
 	text-align: center;
 }
+
+.center-container {
+	position: relative;
+
+	.absolute-center {
+		width: 100%;
+		height: 62%;
+		overflow: auto;
+		margin: auto;
+		@include position(absolute, 0);
+		padding: 10px;
+	}
+}
+
+.black {
+	color: $dark-gray;
+}
+.red {
+	color: $red;
+}
