--- a/css/styles.css
+++ b/css/styles.css
@@ -496,7 +496,7 @@ button {
   cursor: pointer;
   display: inline-block;
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
+  font-size: 0.875em;
   font-weight: 600;
   line-height: 1;
   padding: 0.75em 1em;
@@ -525,7 +525,7 @@ label,
 select {
   display: block;
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em; }
+  font-size: 0.875em; }
 
 label {
   font-weight: 600;
@@ -544,7 +544,7 @@ textarea {
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   box-sizing: border-box;
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
+  font-size: 0.875em;
   margin-bottom: 0.75em;
   padding: 0.5em;
   transition: border-color;
@@ -630,7 +630,7 @@ body {
   -webkit-font-smoothing: antialiased;
   color: #333;
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
+  font-size: 0.875em;
   line-height: 1.5; }
 
 h1,
@@ -640,7 +640,7 @@ h4,
 h5,
 h6 {
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  font-size: 1em;
+  font-size: 0.875em;
   line-height: 1.2;
   margin: 0 0 0.75em; }
 
@@ -683,55 +683,125 @@ picture {
 .text-center {
   text-align: center; }
 
-html, body {
-  height: 100%; }
+.center-container {
+  position: relative; }
+  .center-container .absolute-center {
+    width: 100%;
+    height: 62%;
+    overflow: auto;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 10px; }
 
-header, section.map {
+.black {
+  color: #333; }
+
+.red {
+  color: #6D3D3B; }
+
+html, body {
   max-width: 100%;
   margin-left: auto;
   margin-right: auto; }
-  header::after, section.map::after {
+  html::after, body::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+h1 {
+  font-size: 1.95313em;
+  color: #6D3D3B; }
+  h1 a {
+    font-size: 50%; }
+
+header,
+aside.controls,
+section.map,
+footer {
+  display: block; }
+  header::after,
+  aside.controls::after,
+  section.map::after,
+  footer::after {
     clear: both;
     content: "";
     display: table; }
 
 header {
-  margin: 3.6em 0; }
+  margin: 1.2em 0;
+  padding: 1.2em; }
+  header h1 {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 23.23176%;
+    margin-left: 17.05961%; }
+    header h1:last-child {
+      margin-right: 0; }
+  header article {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 40.29137%; }
+    header article:last-child {
+      margin-right: 0; }
+
+aside.controls {
+  background-color: #465957;
+  padding: 1.2em 0;
+  color: #ddd; }
+  aside.controls .checkbox {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 31.76157%;
+    margin-left: 8.5298%;
+    border-right: 1px solid #303c3b; }
+    aside.controls .checkbox:last-child {
+      margin-right: 0; }
+    aside.controls .checkbox label {
+      display: inline-block; }
+    aside.controls .checkbox .options label {
+      float: left;
+      display: block;
+      margin-right: 7.42297%;
+      width: 19.43277%;
+      line-height: 2;
+      cursor: pointer; }
+      aside.controls .checkbox .options label:last-child {
+        margin-right: 0; }
+  aside.controls .slider {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%; }
+    aside.controls .slider:last-child {
+      margin-right: 0; }
+    aside.controls .slider input[type='range'] {
+      width: 100%;
+      margin: 1em 0; }
+    aside.controls .slider .years > div {
+      float: left;
+      display: block;
+      margin-right: 16.03631%;
+      width: 41.98184%;
+      line-height: 2; }
+      aside.controls .slider .years > div:last-child {
+        margin-right: 0; }
 
 section.map {
   position: relative; }
-  section.map .controls {
-    z-index: 2;
-    border: 1px solid gray;
-    border-radius: 2px;
-    height: 400px;
-    padding: 10px;
-    position: absolute;
-    top: 100px;
-    bottom: 100px;
-    left: 10px;
-    max-width: 38%;
-    margin-left: auto;
-    margin-right: auto;
-    min-width: 250px;
-    background: white;
-    overflow: scroll; }
-    section.map .controls::after {
-      clear: both;
-      content: "";
-      display: table; }
-    section.map .controls input[type='range'] {
-      width: 100%; }
-    section.map .controls input[type='range']::-webkit-slider-runnable-track:after {
-      position: absolute;
-      float: left;
-      width: 100%;
-      font-size: 9px;
-      white-space: 10px;
-      content: "Vše 1947-1950 1951-1965 1966-1971 1972-1989"; }
   section.map #map-canvas {
     z-index: 0;
     height: 600px; }
+
+footer {
+  height: 8.4em;
+  background-color: #333; }
 
 .label-switch {
   border-radius: 32px;
@@ -802,5 +872,70 @@ section.map {
         transform: scale(0); }
       .label-switch input[type="checkbox"]:checked + .checkbox:after {
         left: 22px; }
+
+input.option {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  position: relative;
+  top: 6px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  -webkit-transition: all 0.15s ease-out 0s;
+  -moz-transition: all 0.15s ease-out 0s;
+  transition: all 0.15s ease-out 0s;
+  background: #698C89;
+  border: none;
+  cursor: pointer;
+  display: inline-block;
+  outline: none;
+  position: relative;
+  z-index: 1000; }
+  input.option:hover {
+    background: #3b2120; }
+  input.option:checked {
+    background: #6D3D3B; }
+  input.option.radio {
+    border-radius: 50%; }
+    input.option.radio::after {
+      border-radius: 50%; }
+
+input.range {
+  -webkit-appearance: none;
+  height: 10px;
+  border-radius: 5px;
+  background: #698C89;
+  outline: none; }
+  input.range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
+    background: #353535;
+    cursor: pointer;
+    -webkit-transition: background .15s ease-in-out;
+    transition: background .15s ease-in-out; }
+    input.range::-webkit-slider-thumb:hover {
+      background: #946563; }
+  input.range:active::-webkit-slider-thumb {
+    background: #946563; }
+  input.range::-moz-range-thumb {
+    height: 18px;
+    width: 18px;
+    border: 0;
+    border-radius: 50%;
+    background: #353535;
+    cursor: pointer;
+    -webkit-transition: background .15s ease-in-out;
+    transition: background .15s ease-in-out; }
+    input.range::-moz-range-thumb:hover {
+      background: #946563; }
+  input.range:active::-moz-range-thumb {
+    background: #946563; }
 
 /*# sourceMappingURL=styles.css.map */
