--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,7 @@
 @import "normalize/normalize";
 @import "base/base";
 @import "base/class-variables";
+@import "layout/layout";
 
 // ===============================================
 
@@ -110,4 +111,3 @@ footer {
 
 // ===============================================
 
-@import "components";
