--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$base-font-family: $helvetica;
-$heading-font-family: $base-font-family;
+$base-font-family: "karmina", $helvetica;
+$heading-font-family: "karmina-sans", $helvetica;
 
 // Font Sizes
 $base-font-size: 1em;
