--- a/css/normalize/_normalize-opentype.scss
+++ b/css/normalize/_normalize-opentype.scss
@@ -195,23 +195,23 @@ input[type="week"] {
 //   /*         ”       “  */
 // }
 //
-// :lang(cs) q,
-// :lang(de) q,
-// :lang(sk) q,
-// :lang(sl) q,
-// :lang(sb) q,
-// :lang(is) q {
-//   quotes: '\201E' '\201C' '\201A' '\2018' '\201E' '\201C' '\201A' '\2018';
-//   /*         „       “       ‚       ‘       „       “       ‚       ‘  */
-// }
-//
-// q:before {
-//   content: open-quote;
-// }
-//
-// q:after {
-//   content: close-quote;
-// }
+:lang(cs) q,
+:lang(de) q,
+:lang(sk) q,
+:lang(sl) q,
+:lang(sb) q,
+:lang(is) q {
+  quotes: '\201E' '\201C' '\201A' '\2018' '\201E' '\201C' '\201A' '\2018';
+  /*         „       “       ‚       ‘       „       “       ‚       ‘  */
+}
+
+q:before {
+  content: open-quote;
+}
+
+q:after {
+  content: close-quote;
+}
 
 
 /* Tables
